horizontal scroll on mobile fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,6 @@
 
 html,
 body {
-  height: 100%;
-  width: 100%;
   font-size: 16px;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
